--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -29,3 +29,4 @@ material3 = { group = "androidx.compose.material3", name = "material3" }
 androidApplication = { id = "com.android.application", version.ref = "agp" }
 kotlinAndroid = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
 composeCompiler = { id = "org.jetbrains.kotlin.plugin.compose", version.ref = "kotlin" }
+ktlintGradle = { id = "org.jlleitschuh.gradle.ktlint", version = "12.1.1" }
