--- a/.editorconfig
+++ b/.editorconfig
@@ -1,4 +1,8 @@
 [*.{kt,kts}]
-ij_kotlin_allow_trailing_comma=true
-ij_kotlin_allow_trailing_comma_on_call_site=true
-ktlint_function_naming_ignore_when_annotated_with=Composable,Test
+ktlint_code_style = android_studio
+ktlint_experimental = enabled
+ktlint_standard_class-signature = disabled
+ktlint_standard_function-signature = disabled
+ktlint_function_naming_ignore_when_annotated_with = Composable, Test
+ij_kotlin_allow_trailing_comma = true
+ij_kotlin_allow_trailing_comma_on_call_site = true
