--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -6,6 +6,7 @@ lifecycle-runtime-ktx = "2.8.6"
 activity-compose = "1.9.2"
 compose-bom = "2024.09.02"
 kotlinx-coroutines = "1.10.1"
+kotlinx-collections-immutable = "0.3.8"
 composeRules = "0.4.22"
 testParameterInjector = "1.18"
 
@@ -21,7 +22,9 @@ ui-tooling-preview = { group = "androidx.compose.ui", name = "ui-tooling-preview
 material3 = { group = "androidx.compose.material3", name = "material3" }
 composeRules = { group = "io.nlopez.compose.rules", name = "ktlint", version.ref = "composeRules" }
 kotlin-test = { group = "org.jetbrains.kotlin", name = "kotlin-test", version.ref = "kotlin" }
+kotlinx-coroutines-core = { group = "org.jetbrains.kotlinx", name = "kotlinx-coroutines-core", version.ref = "kotlinx-coroutines" }
 kotlinx-coroutines-test = { group = "org.jetbrains.kotlinx", name = "kotlinx-coroutines-test", version.ref = "kotlinx-coroutines" }
+kotlinx-collections-immutable = { group = "org.jetbrains.kotlinx", name = "kotlinx-collections-immutable", version.ref = "kotlinx-collections-immutable" }
 testParameterInjector = { group = "com.google.testparameterinjector", name = "test-parameter-injector", version.ref = "testParameterInjector" }
 
 android-gradlePlugin = { group = "com.android.tools.build", name = "gradle", version.ref = "agp" }
