--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,6 +1,7 @@
 [versions]
 activity-compose = "1.10.1"
 androidGradlePlugin = "8.9.0"
+browser = "1.8.0"
 compose-bom = "2025.02.00"
 composeRules = "0.4.22"
 hilt = "2.55"
@@ -20,6 +21,7 @@ testParameterInjector = "1.18"
 
 [libraries]
 activity-compose = { group = "androidx.activity", name = "activity-compose", version.ref = "activity-compose" }
+browser = { group = "androidx.browser", name = "browser", version.ref = "browser" }
 compose-bom = { group = "androidx.compose", name = "compose-bom", version.ref = "compose-bom" }
 compose-material3 = { group = "androidx.compose.material3", name = "material3" }
 compose-ui = { group = "androidx.compose.ui", name = "ui" }
