--- a/.editorconfig
+++ b/.editorconfig
@@ -4,6 +4,7 @@ ktlint_experimental = enabled
 ktlint_standard_class-signature = disabled
 ktlint_standard_function-signature = disabled
 ktlint_function_naming_ignore_when_annotated_with = Composable, Test
+ktlint_property_naming_constant_naming = pascal_case
 ij_kotlin_allow_trailing_comma = true
 ij_kotlin_allow_trailing_comma_on_call_site = true
 compose_allowed_composition_locals = LocalNavController
