--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -82,4 +82,5 @@ buildlogic-android-application = { id = "buildlogic.android.application", versio
 buildlogic-android-compose = { id = "buildlogic.android.compose", version = "unspecified" }
 buildlogic-android-library = { id = "buildlogic.android.library", version = "unspecified" }
 buildlogic-hilt = { id = "buildlogic.hilt", version = "unspecified" }
+buildlogic-robolectric = { id = "buildlogic.robolectric", version = "unspecified" }
 buildlogic-roborazzi = { id = "buildlogic.roborazzi", version = "unspecified" }
