Ignore buildlogic plugins in Renovate
This commit updates the `renovate.json` configuration to ignore buildlogic plugins. These plugins are managed manually and do not require Renovate updates.

--- a/renovate.json
+++ b/renovate.json
@@ -11,5 +11,13 @@
         "/^com.google.devtools.ksp/"
       ]
     }
+  ],
+  "ignoreDeps": [
+    "buildlogic.android.application",
+    "buildlogic.android.library",
+    "buildlogic.android.compose",
+    "buildlogic.hilt",
+    "buildlogic.robolectric",
+    "buildlogic.roborazzi"
   ]
 }
