--- a/.github/workflows/unit-test.yml
+++ b/.github/workflows/unit-test.yml
@@ -12,6 +12,8 @@ jobs:
     timeout-minutes: 30
     permissions:
       contents: read
+      actions: read
+      checks: write
 
     steps:
       - name: Checkout
