--- a/.github/workflows/unit-test.yml
+++ b/.github/workflows/unit-test.yml
@@ -34,4 +34,4 @@ jobs:
         uses: dorny/test-reporter@890a17cecf52a379fc869ab770a71657660be727 # v2.1.0
         with:
           path: '**/build/test-results/**/TEST-*.xml'
-          reporter: 'java-junit'
+          reporter: java-junit
