--- a/.github/workflows/unit-test.yml
+++ b/.github/workflows/unit-test.yml
@@ -41,6 +41,7 @@ jobs:
         if: success() || failure()
         uses: dorny/test-reporter@890a17cecf52a379fc869ab770a71657660be727 # v2.1.0
         with:
+          name: unit-test-report
           path: '**/build/test-results/**/TEST-*.xml'
           reporter: java-junit
 
