Refine screenshot test result display in CI
The Github workflow for unit tests will now only include `_compare.png` files in the screenshot test results summary. This makes the summary more focused by excluding other generated image files.

--- a/.github/workflows/unit-test.yml
+++ b/.github/workflows/unit-test.yml
@@ -81,7 +81,7 @@ jobs:
 
       - name: Display Screenshot Test Results
         run: |
-          files=$(find . | sort)
+          files=$(find . -type f -name "*_compare.png" | sort)
           if [ -n "$files" ]; then
             echo "## Screenshot Test Results\n" >> "$GITHUB_STEP_SUMMARY"
             echo "| Name | Image |\n" >> "$GITHUB_STEP_SUMMARY"
