Fix screenshot names in GitHub Actions summary
The screenshot names in the GitHub Actions summary were previously being wrapped with `<br>` tags, which caused them to be displayed incorrectly. This commit removes the wrapping to fix the display issue.

--- a/.github/workflows/unit-test.yml
+++ b/.github/workflows/unit-test.yml
@@ -87,7 +87,7 @@ jobs:
             echo "| Name | Image |\n" >> "$GITHUB_STEP_SUMMARY"
             echo "| --- | --- |\n" >> "$GITHUB_STEP_SUMMARY"
             for file in $files; do
-              name=$(basename "$file" | sed -r 's/(.{20})/\1<br>/g')
+              name=$(basename "$file")
               image_path="https://github.com/${{ github.repository }}/blob/$COMPANION_BRANCH/$file"
               image="![]($image_path?raw=true)"
               echo "| $name | $image |\n" >> "$GITHUB_STEP_SUMMARY"
