--- a/.github/workflows/record-screenshots.yml
+++ b/.github/workflows/record-screenshots.yml
@@ -7,7 +7,7 @@ concurrency:
   cancel-in-progress: true
 
 jobs:
-  unit-test:
+  record-screenshots:
     runs-on: ubuntu-latest
     timeout-minutes: 30
     permissions:
