Improve screenshot test result formatting in GitHub Actions summary
The screenshot test results in the GitHub Actions summary will now be displayed with the filename as a header for each image, rather than in a table. This improves readability, especially when filenames are long.

--- a/.github/workflows/unit-test.yml
+++ b/.github/workflows/unit-test.yml
@@ -84,13 +84,12 @@ jobs:
           files=$(find . -type f -name "*_compare.png" | sort)
           if [ -n "$files" ]; then
             echo "## Screenshot Test Results" >> "$GITHUB_STEP_SUMMARY"
-            echo "| Name | Image |" >> "$GITHUB_STEP_SUMMARY"
-            echo "| --- | --- |" >> "$GITHUB_STEP_SUMMARY"
+            echo "" >> "$GITHUB_STEP_SUMMARY"
             for file in $files; do
-              name=$(basename "$file")
               image_path="https://github.com/${{ github.repository }}/blob/$COMPANION_BRANCH/$file"
-              image="![]($image_path?raw=true)"
-              echo "| $name | $image |" >> "$GITHUB_STEP_SUMMARY"
+              echo "" >> "$GITHUB_STEP_SUMMARY"
+              echo "$(basename "$file" | sed 's/_compare\.png$//')" >> "$GITHUB_STEP_SUMMARY"
+              echo "![]($image_path?raw=true)" >> "$GITHUB_STEP_SUMMARY"
               git add "$file"
             done
             git config --global user.name screenshot-bot
