GitHub Actions: Enhance screenshot test failure reporting
Improves the GitHub Actions workflow for unit tests by:
- Adding a "NOTE" admonition to the screenshot test results section.
- Displaying the count of screenshots with differences.
- Wrapping the detailed image diffs in a collapsible section.

--- a/.github/workflows/unit-test.yml
+++ b/.github/workflows/unit-test.yml
@@ -85,7 +85,8 @@ jobs:
         run: |
           files=$(find . -type f -name "*_compare.png" | sort)
           if [ -n "$files" ]; then
-            echo "## Screenshot Test Results" >> "$REPORT_FILE"
+            echo "> [!NOTE]" >> "$REPORT_FILE"
+            echo "> Differences found in $(echo "$files" | wc -l) screenshots." >> "$REPORT_FILE"
             echo "" >> "$REPORT_FILE"
             echo "<details><summary>Expand for details</summary>" >> "$REPORT_FILE"
             for file in $files; do
