--- a/.github/workflows/unit-test.yml
+++ b/.github/workflows/unit-test.yml
@@ -93,7 +93,7 @@ jobs:
             for file in $files; do
               image_path="https://github.com/${{ github.repository }}/blob/$COMPANION_BRANCH/$file"
               echo "" >> "$REPORT_FILE"
-              echo "$(basename "$file" | sed 's/_compare\.png$//')" >> "$REPORT_FILE"
+              echo "\`$(basename "$file" | sed 's/_compare\.png$//')\`" >> "$REPORT_FILE"
               echo "![]($image_path?raw=true)" >> "$REPORT_FILE"
               git add "$file"
             done
