Rename Github Action step names for better readability

--- a/.github/workflows/spotless.yml
+++ b/.github/workflows/spotless.yml
@@ -26,5 +26,5 @@ jobs:
       - name: Setup Gradle
         uses: gradle/actions/setup-gradle@ac638b010cf58a27ee6c972d7336334ccaf61c96 # v4
 
-      - name: Spotless Check
+      - name: Check spotless
         run: ./gradlew spotlessCheck
