--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -38,10 +38,12 @@ jobs:
         env:
           REVIEWDOG_GITHUB_API_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
-          reviewdog \
-            -name="lint" \
-            -f=sarif \
-            -reporter=github-pr-check \
-            -fail-level=error \
-            -filter-mode=nofilter \
-            < app/build/reports/lint-results-debug.sarif
+          find . -regex '^.*/build/reports/lint-results.*\.sarif$' -type f | while read report; do
+            reviewdog \
+              -name="lint" \
+              -f=sarif \
+              -reporter=github-pr-check \
+              -fail-level=error \
+              -filter-mode=nofilter \
+              < "$report"
+          done
